# amd-host-image-builder

./: .gitignore  .gitmodules  Cargo.toml  GNUmakefile  Makefile  README.md  TODO.md  build.rs  rust-toolchain  rust-toolchain.toml  rustfmt.toml  testpl.ld  testpl.s
.github/buildomat/: config.toml
.github/buildomat/jobs/: build-and-test.sh
.github/workflows/: ci.yaml
ahib-config/: Cargo.toml
ahib-config/src/: lib.rs
ahib-schema/: Cargo.toml
ahib-schema/src/: main.rs
amd-host-image-builder-config/: Cargo.toml
amd-host-image-builder-config/examples/: amd-host-image-builder-schema.rs
amd-host-image-builder-config/src/: lib.rs
apps/: genoa-ruby-1.0.0.b.toml  milan-ethanol-x-1.0.0.a.toml  milan-ethanol-x-1.0.0.g.toml  test.toml  turin-cosmo-1.0.0.4.toml  turin-cosmo-1.0.0.5.toml  turin-ruby-1.0.0.3-p1.toml  turin-ruby-1.0.0.4.toml  turin-ruby-1.0.0.5.toml  turin-ruby-1.0.0.6.toml  turin-ruby-1.0.0.7.toml  turin-rubyred-1.0.0.3-p1.toml  turin-rubyred-1.0.0.4.toml  turin-rubyred-1.0.0.5.toml
etc/: Milan.efs.json5  Milan.json  Rome.efs.json5  Rome.json  genoa-ruby-1.0.0.0-agesa.efs.json5  genoa-ruby-1.0.0.0.efs.json5  genoa-ruby-1.0.0.b.efs.json5  milan-ethanol-x-1.0.0.1.efs.json5  milan-ethanol-x-1.0.0.2.efs.json5  milan-ethanol-x-1.0.0.4.efs.json5  milan-ethanol-x-1.0.0.5.efs.json5  milan-ethanol-x-1.0.0.9-mbist.efs.json5  milan-ethanol-x-1.0.0.9.efs.json5  milan-ethanol-x-1.0.0.a-mbist.efs.json5  milan-ethanol-x-1.0.0.a.efs.json5  milan-ethanol-x-1.0.0.g.efs.json5  milan-ethanol-x.efs.json5  milan-gimlet-b-1.0.0.1.efs.json5  milan-gimlet-b-1.0.0.9-mbist.efs.json5  milan-gimlet-b-1.0.0.a.efs.json5  milan-gimlet-b-1.0.0.g.efs.json5  milan-gimlet-b-mbist-cfg.efs.json5  milan-gimlet-b.efs.json5  rome-ethanol-x.efs.json5  test-test-test.efs.json5  test.json5  turin-cosmo-1.0.0.3-p1.efs.json5  turin-cosmo-1.0.0.5.efs.json5  turin-cosmo-1.0.0.6.efs.json5  turin-ruby-0.0.7.3.efs.json5  turin-ruby-0.0.8.1.efs.json5  turin-ruby-1.0.0.0.efs.json5  turin-ruby-1.0.0.1-p1.efs.json5  turin-ruby-1.0.0.2-p1-mbist.efs.json5  turin-ruby-1.0.0.2-p1.efs.json5  turin-ruby-1.0.0.3-p1.efs.json5  turin-ruby-1.0.0.3.efs.json5  turin-ruby-1.0.0.4.efs.json5  turin-ruby-1.0.0.5.efs.json5  turin-ruby-1.0.0.6.efs.json5  (+4 more)
etc/patches/: turin-red.patch
src/: allocators.rs  dump_serializer.rs  hole.rs  images.rs  main.rs  serializers.rs  static_config.rs
test-inputs/: Milan-new.efs.json5  Milan.efs.json5
test-inputs/data/test/: test.blob
tests/: schema.rs  versioning.rs
tests/data/: Milan-new.efs.json5  Milan.efs.json5
xtask/: Cargo.toml  build.rs  testpl.s
xtask/src/: app.rs  main.rs
