[package]
name = "amd-host-image-builder"
description = "Builds a flash image for an AMD CPU"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amd-apcb = { git = "https://github.com/oxidecomputer/amd-apcb.git", tag = "v0.4.1", features = ["std", "serde", "schemars"] }
amd-efs = { git = "ssh://git@github.com/oxidecomputer/amd-efs.git", tag = "v0.4.1", features = ["std", "serde", "schemars"] }
goblin = { version = "0.4", features = ["elf64", "endian_fd"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.78"
structopt = "0.3"
amd-host-image-builder-config = { path = "amd-host-image-builder-config" }
json5 = "0.4.1"
static_assertions = "1.1.0"
bytesize = "1.3.0"
unic-ucd-ident = { version = "0.9.0", features = ["id"] }
