workspace = { members = ["ahib-schema", "ahib-config", "xtask"] }

[package]
name = "amd-host-image-builder"
description = "Builds a flash image for an AMD CPU"
authors = ["Oxide Computer Company"]
version = "0.1.2"
edition = "2021"
license = "MPL-2.0"

[dependencies]
amd-apcb = { git = "https://github.com/oxidecomputer/amd-apcb.git", tag = "v0.5.1", features = ["std", "serde", "schemars"] }
amd-efs =  { git = "ssh://git@github.com/oxidecomputer/amd-efs.git", tag = "v0.4.3", features = ["std", "serde", "schemars"] }
goblin = { version = "0.9", features = ["elf64", "endian_fd"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0.78"
structopt = "0.3"
amd-host-image-builder-config = { path = "ahib-config" }
json5 = "0.4.1"
static_assertions = "1.1.0"
bytesize = "2.0"
unic-ucd-ident = { version = "0.9.0", features = ["id"] }
