[package]
name = "amd-host-image-builder-config"
version = "0.1.0"
edition = "2024"

[dependencies]
amd-apcb = { git = "https://github.com/oxidecomputer/amd-apcb.git", branch = "main", features = ["std", "serde", "schemars"] }
amd-efs = { git = "https://github.com/oxidecomputer/amd-efs.git", branch = "main", features = ["std", "serde", "schemars"] }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "2.0"
