[package]
name = "amd-host-image-builder-config"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amd-apcb = { git = "https://github.com/oxidecomputer/amd-apcb.git", tag = "v0.4.1", features = ["std", "serde", "schemars"] }
amd-efs = { git = "ssh://git@github.com/oxidecomputer/amd-efs.git", tag = "v0.4.1", features = ["std", "serde", "schemars"] }
schemars = "0.8.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0.48"

[dev-dependencies]
serde_json = "1.0.78"
json5 = "0.4.1"
valico = "2"
